<?xml version="1.0"?>
<package format="3">
  <name>minkindr_conversions</name>
  <version>0.0.0</version>
  <description>Conversions between minkindr and ROS messages and TF.</description>
  <maintainer email="helenoleynikova@gmail.com">Helen Oleynikova</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>minkindr</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
