<?xml version="1.0"?>
<package format="3">
  <name>octomap_world</name>
  <version>0.0.0</version>
  <description>
      A wrapper for Octomap, allowing insertions of pointclouds and disparity maps.
      Inherits from WorldBase in volumetric_map_base package.
  </description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>minkindr_conversions</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>volumetric_map_base</depend>
  <depend>volumetric_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
