<?xml version="1.0"?>
<package>
  <name>volumetric_msgs</name>
  <version>0.0.0</version>
  <description>Messages and services for volumetric mapping.</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
