<?xml version="1.0"?>
<package format="3">
  <name>volumetric_msgs</name>
  <version>0.0.0</version>
  <description>Messages and services for volumetric mapping.</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>geometry_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
